--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Quizzes</title>
+    <link rel="shortcut icon" href="https://qstuffs.com/logo.svg" type="image/x-icon" />
+    <title>Qstuffs Quizzes</title>
     <script>
         function handleAdBlock() {
             const checkClientAdBlock = () => {
@@ -103,6 +104,8 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+
+        
 
         <!-- Existing content continued -->
         <div><style>#adsblock__wrapper{display:none;position:fixed;background:#ddd;z-index:9999999;opacity:1;visibility:visible;top:100px;right:0;left:0;max-width:640px;margin-right:auto;margin-left:auto;box-shadow:rgba(0,0,0,.25) 0 3px 5px 2px;font-family:Arial,Helvetica,sans-serif}#adsblock__wrapper .adsblock__wrapper-content{padding:30px 30px 15px}#adsblock__wrapper #adsblock__wrapper-cls{display:inline-block;position:absolute;top:15px;right:15px;width:30px;height:30px;color:#bbb;font-size:32px;font-weight:700;line-height:30px;text-align:center;cursor:pointer;-webkit-transition:.3s;transition:.3s}#adsblock__wrapper #adsblock__wrapper-cls:hover{color:#5f5e5e}#adsblock__wrapper-bg{display:none;position:fixed;z-index:999999;background:rgba(0,0,0,.8);top:0;left:0;width:100%;height:100%}</style><div id="adsblock__wrapper"><div class="adsblock__wrapper-content"><h1 style="margin-bottom:15px;padding:0 30px;color:#252b37;font-size:28px;line-height:1.25;text-align:center">Adblocker detected! Please consider reading this notice.</h1><p>We've detected that you are using AdBlock Plus or some other adblocking software which is preventing the page from fully loading.</p><p>We don't have any banner, Flash, animation, obnoxious sound, or popup ad. We do not implement these annoying types of ads!</p><p>We need money to operate the site, and almost all of it comes from our online advertising.</p><p><strong>Please add <a href="http://yourdomain.com" target="_blank" rel="noopener">yourdomain.com</a> to your ad blocking whitelist or disable your adblocking software.</strong></p></div></div><div id="adsblock__wrapper-bg"></div></div>
