--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
    
-    <title>Qstuffs Quizzes</title>
+    <title>Qstuffs Quizzes For Fun</title>
     <link rel="shortcut icon" href="https://qstuffs.com/logo.svg" type="image/x-icon" />
     <script>
         function handleAdBlock() {
