--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -84,7 +84,7 @@
             <li>Address: St. Papanggo I C Tanjung Priok, North Jakarta, Postal Code 14340, Indonesia</li>
         </ul>
 
-        <p>Effective Date: [Date]</p>
+        <p>Effective Date: Updated August 2024</p>
     </div>
 </body>
 </html>
