--- a/aboutus.html
+++ b/aboutus.html
@@ -137,7 +137,7 @@
     </div>
 
     <footer class="footer">
-        © [Current Year] [Your Website Name]. All rights reserved.
+        © 2024 Qstuffs.com - All rights reserved.
     </footer>
 </body>
 
