--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             </script>
         </div>
 
+       <div id='b_script_4791864'><script async src='//cache.betweendigital.com/sections/2/4791864.js'></script></div>
+
         
 
         <!-- Existing content continued -->
