--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             language: "en",
             logoDesktop: "https://qstuffs.com/logo.svg",
             logoMobile: "https://qstuffs.com/logo.svg",
-            menu: [{"name":"Home","link":"/"},{"name":"About Us","link":"/aboutus.html"},{"name":"Privacy Policy","link":"/privacypolicy.html"},{"name":"Disclaimer","link":"/disclaimer.html"},{"name":"Advertisement","link":"/ads.html"}],
+            menu: [{"name":"Home","link":"/"},{"name":"About Us","link":"/aboutus.html"},{"name":"Privacy Policy","link":"/privacypolicy.html"},{"name":"Disclaimer","link":"/disclaimer.html"},{"name":"Imprint / Contact US","link":"/imprint.html"},{"name":"Advertisement","link":"/ads.html"}],
             keyword: {
                 notIn: []
             },
