--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-   
+    <meta name="google-adsense-account" content="ca-pub-2884555402353266">
     <title>Qstuffs Quizzes For Fun</title>
     <link rel="shortcut icon" href="https://qstuffs.com/logo.svg" type="image/x-icon" />
     <script>
